# falco_blueprint_basic_pico

./: README.md  cookiecutter.json
.github/workflows/: ci.yml  pre-commit-auto-update.yml
{{ cookiecutter.project_name }}/: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  README.md  justfile  manage.py  playground.ipynb  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: cd.yml  ci.yml
{{ cookiecutter.project_name }}/blueprints/: create.html.jinja  detail.html.jinja  list.html.jinja  update.html.jinja
{{ cookiecutter.project_name }}/config/: settings.py  urls.py
{{ cookiecutter.project_name }}/deploy/: Dockerfile  Dockerfile.binary  entrypoint.sh
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/server/: run
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/setup/: up
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/s6-rc.d/worker/: run
{{ cookiecutter.project_name }}/deploy/etc/s6-overlay/scripts/: db-prepare.sh  setup.sh
{{ cookiecutter.project_name }}/docs/: conf.py  index.rst
{{ cookiecutter.project_name }}/tests/: conftest.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __main__.py  asgi.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/core/: apps.py  sentry.py  types.py  urls.py  views.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/templates/: 403_csrf.html  404.html  500.html  base.html  base_email.html
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/templates/.well-known/: security.txt
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/templates/core/: about.html  base.html  home.html
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/templates/pages/: about.html  home.html
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/users/: admin.py
