[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "django[argon2]",
  "django-allauth",
  "django-anymail[amazon-ses]",
  "django-browser-reload",
  "django-debug-toolbar",
  "django-extensions",
  "django-fastdev",
  "django-htmx",
  "django-model-utils",
  "django-tailwind-cli",
  "django-template-partials",
  "django-q2",
  "django-q-registry",
  "django-health-check",
  "environs[django]",
  "heroicons[django]",
  "gunicorn",
  "boto3",
  "crispy-tailwind",
  "hiredis",
  "Pillow",
  "psycopg[binary]",
  "redis",
  "sentry-sdk",
  "whitenoise",
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 120
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.coverage.run]
source_pkgs = ["{{ cookiecutter.project_name }}", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
{{ cookiecutter.project_name }} = ["*/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}"]
tests = ["tests", "*/{{ cookiecutter.project_name }}/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.falco]
htmx = "{{ cookiecutter.project_name }}/static/vendors/htmx/htmx.min.js"

[tool.falco.work]
server = "python manage.py migrate && python manage.py runserver"
tailwind = "python manage.py tailwind watch"
worker = "python manage.py qcluster"

[tool.hatch.env]
requires = [
  "hatch-pip-compile"
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.default]
type = "pip-compile"
pip-compile-constraint = "default"
pip-compile-installer = "pip-sync"
lock-filename = "requirements.txt"
dependencies = ["dj-notebook>=0.6.1", "Werkzeug[watchdog]>=3.0.1", "pre-commit", "django-stubs[compatible-mypy]", "falco-cli"]

[tool.hatch.envs.default.scripts]
runserver = ["migrate", "python manage.py tailwind runserver {args}"]
migrate = "python manage.py migrate {args}"
makemigrations = "python manage.py makemigrations {args}"
reset-db = "python manage.py reset_db --noinput"
shell = "python manage.py shell_plus {args}"
upgrade-deps = ["rm requirements.txt", "hatch env run --env default -- python --version"]

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-django",
  "pytest-sugar",
  "pytest-xdist",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
addopts = "--reuse-db -n auto"
norecursedirs = ".* bin build dist *.egg htmlcov logs node_modules static templates venv"
python_files = "tests.py test_*.py *_tests.py"

[tool.ruff.lint]
extend-ignore = ["TID252", "RUF012", "TRY003", "EM101", "I001", "I002"]

[tool.ruff.lint.extend-per-file-ignores]
"deploy/*" = ["INP001"]
"*/migrations/*" = ["E501"]
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]