[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "django[argon2]",
  "django-allauth",
  "django-anymail[amazon-ses]",
  "django-storages[s3]",
  "django-browser-reload",
  "django-debug-toolbar",
  "django-tailwind-cli",
  "django-template-partials",
  "django-lifecycle",
  "django-q2",
  "django-q-registry",
  "django-health-check",
  "django-extensions",
  "django-fastdev",
  "django-htmx",
  "django-model-utils",
  "diskcache",
  "environs[django]",
  "heroicons[django]",
  "gunicorn",
  "boto3",
  "crispy-tailwind",
  "Pillow",
  "psycopg[binary]",
  "sentry-sdk",
  "whitenoise",
]

[tool.django-stubs]
django_settings_module = "{{ cookiecutter.project_name }}.settings"

[tool.djlint]
custom_blocks = "partialdef"
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002,H021"
include = "H017,H035"
indent = 2
max_line_length = 120
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.coverage.run]
source_pkgs = ["{{ cookiecutter.project_name }}", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
{{ cookiecutter.project_name }} = ["*/{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}"]
tests = ["tests", "*/{{ cookiecutter.project_name }}/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.falco]
htmx = "{{ cookiecutter.project_name }}/static/vendors/htmx/htmx.min.js"

[tool.falco.work]
server = "python manage.py migrate && python manage.py runserver {address}"
tailwind = "python manage.py tailwind watch"
worker = "python manage.py qcluster"

[tool.hatch.env]
requires = [
  "hatch-pip-compile>=1.11.2"
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.default]
type = "pip-compile"
pip-compile-constraint = "default"
pip-compile-installer = "uv"
pip-compile-resolver = "uv"
lock-filename = "requirements.txt"

[tool.hatch.envs.dev]
dependencies = [
    "django-browser-reload",
    "django-debug-toolbar",
    "dj-notebook>=0.6.1",
    "Werkzeug[watchdog]>=3.0.1",
    "django-stubs[compatible-mypy]",
    "coverage[toml]>=6.5",
    "pre-commit",
    "pytest",
    "pytest-django",
    "pytest-sugar",
    "pytest-xdist",
    "falco-cli",
    "django-watchfiles",
]
lock-filename = "requirements-dev.txt"

[tool.hatch.envs.docs]
dependencies = [
  "furo",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-design",
  "myst-parser",
]
lock-filename = "docs/requirements.txt"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
ignore_errors = true
module = [
  "allauth.*",
  "boto3.*",
  "botocore.*",
  "debug_toolbar.*",
  "django_filters.*",
  "django_q.*",
  "djclick.*",
  "gunicorn.*",
  "health_check.*",
  "*.migrations.*"
]

[tool.mypy_django_plugin]
ignore_missing_model_attributes = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_name }}.settings"
addopts = "--reuse-db -n auto"
norecursedirs = ".* bin build dist *.egg htmlcov logs node_modules static templates venv"
python_files = "tests.py test_*.py *_tests.py"

[tool.ruff.lint]
extend-ignore = ["TID252", "RUF012", "TRY003", "EM101", "I001", "I002"]

[tool.ruff.lint.extend-per-file-ignores]
"deploy/*" = ["INP001"]
"*/migrations/*" = ["E501"]
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]
"docs/conf.py" = ["INP001", "A001"]
